# cfb-ranker

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: Test.yml
cfb_ranker/: __init__.py  ranker.py
tests/: test_general.py
