[tool.poetry]
name = "cfb-ranker"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Josh Odell <j01101111sh@gmail.com>"]
maintainers = ["Josh Odell <j01101111sh@gmail.com>"]
readme = "README.md"
packages = [{include = "cfb_ranker"}]

[tool.poetry.dependencies]
python = "^3.10"
cfbd = "^4.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pylint = "^2.15.2"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
target-version = 'py310'

[tool.isort]
profile = 'black'

[tool.pylint.main]
disable=["too-many-instance-attributes"]

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
python_functions = "test_*"

log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s - %(module)s:%(lineno)s %(funcName)s - %(name)s\n\t%(message)s"

log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(levelname)s - %(module)s:%(lineno)s %(funcName)s - %(name)s\n\t%(message)s"

[tool.coverage.report]
omit = ["tests/*.py"]
exclude_lines = [
    "if TYPE_CHECKING:"
]
show_missing = true
