[metadata]
name = cfb-ranker
author = Josh Odell
author_email = j01101111sh@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages=find:
python_requires = >=3.10
install_requires =
    cfbd>=4.4.4

[options.packages.find]
where = 
